tests/reject/type_mismatch.hi
# print takes a string; a bare int argument must be a type error
fn main():
    print(42)
